# wechat-mcp-server

./: .gitignore  README.md  pyproject.toml
wechat_cli_mcp/: __init__.py  __main__.py  cli_listen.py  context.py  distill.py  init_cmd.py  listener.py  sticker.py
